--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<h1>
-    Hello world!
-</h1>
-<img src="./img/Cthulhu beer.png" alt="Testing images with my Cthulhu bartender">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Testing Website</title>
+</head>
+<body>
+    <h1>
+        Hello world!
+    </h1>
+    <img src="./img/Cthulhu beer.png" alt="Testing images with my Cthulhu bartender">
+</body>
+</html>
