Testing again with a link to the image online, instead of in the folder

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>
         Hello world!
     </h1>
-    <img src="./img/Cthulhu beer.png" alt="Testing images with my Cthulhu bartender">
+    <img src="https://media.githubusercontent.com/media/Soelferwulf/udemyTestRepo/main/img/Cthulhu%20beer.png" alt="Testing images with my Cthulhu bartender">
 </body>
 </html>
